# euler-extensions

./: LICENSE  README.md
.github/workflows/: ci.yml
extensions/autoresearch/: Cargo.toml  Euler.extension.json
extensions/autoresearch/src/: main.rs  tests.rs
extensions/causal-dag/: Cargo.toml  Euler.extension.json  README.md
extensions/causal-dag/assets/: palette.json
extensions/causal-dag/assets/viewer/: README.md  constellation-3-5d.html  constellation-3d.html  indented-spine.html  react-dom.production.min.js  runtime.js  top-down.html
extensions/causal-dag/docs/: causal-dag.md
extensions/causal-dag/spec/: SCHEMAS.md  schema_conformance.rs
extensions/causal-dag/spec/fixtures/code_review_study/: events.jsonl  expected.causal-dag.json
extensions/causal-dag/spec/fixtures/emdash_mechanism_analysis/: README.md  events.jsonl  expected.causal-dag.json
extensions/causal-dag/spec/fixtures/knuth_style_search/: README.md  events.jsonl
extensions/causal-dag/src/: active_state.rs  construction.rs  event.rs  export.rs  lib.rs  main.rs  observer_apply.rs  observer_brief.rs  projection.rs  record_observation.rs  refresh.rs  research_enable.rs  research_observer.rs  research_projection.rs  research_record.rs  research_state.rs  revision.rs  sdk.rs  slot_summary.rs  view.rs
extensions/causal-dag/src/export/: graph.rs  html.rs  palette.rs  svg.rs  text.rs
extensions/causal-dag/src/projection/: hints.rs
extensions/causal-dag/src/projection/hints/: revision.rs
extensions/causal-dag/src/research_observer/: task.rs
extensions/causal-dag/src/research_projection/: presentation.rs
extensions/causal-dag/src/research_record/: semantics.rs  validation.rs
extensions/causal-dag/tests/: schema_conformance.rs
extensions/causal-dag/tests/fixtures/causal_dag/code_review_study/: README.md
extensions/code-swarm/: Cargo.toml  Euler.extension.json
extensions/code-swarm/src/: main.rs
extensions/code-swarm/tests/: protocol.rs
extensions/diagnostics-report/: Cargo.toml  Euler.extension.json
extensions/diagnostics-report/src/: main.rs
extensions/maxproof/: Cargo.toml  Euler.extension.json
extensions/maxproof/src/: main.rs  support.rs  tests.rs
extensions/session-export/: Cargo.toml  (+1 more)
(+5 files in other folders)
