[package]
name = "causal-dag"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Euler Causal DAG extension: durable provenance projection, observer folding, and graph exports over the managed-process protocol"

[lib]
name = "causal_dag"
path = "src/lib.rs"

[[bin]]
name = "causal-dag"
path = "src/main.rs"

[dependencies]
euler-managed-process-sdk = { path = "../../sdks/rust/euler-managed-process-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
